car-card-dynamic

--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -15,8 +15,7 @@
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <!-- <div id="demo"></div> -->
-                        <img src="../../assets/Toyota-Fortuner-110120211829 2.png" class="d-block w-100" alt="...">
+                            <img src="../../assets/Cars/toyota.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="../../assets/Toyota-Fortuner-Interior 1.png" class="d-block w-100" alt="...">
