--- a/src/app/home-screen/home-car-collec/home-car-collec.component.html
+++ b/src/app/home-screen/home-car-collec/home-car-collec.component.html
@@ -99,19 +99,19 @@
                     <div class="smallblock">
                         <div class="smallsubblock text-center">
                             <img src="../../../assets/speedometer-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                            <p>4,000</p>
+                            <p>{{car.speed}}</p>
                         </div>
                         <div class="smallsubblock text-center">
                             <img src="../../../assets/manual-gearbox.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                            <p>Auto</p>
+                            <p>{{car.gear}}</p>
                         </div>
                         <div class="smallsubblock text-center">
                             <img src="../../../assets/users-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                            <p>4 Person</p>
+                            <p>{{car.capacity}}</p>
                         </div>
                         <div class="smallsubblock text-center">
                             <img src="../../../assets/gas-station.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                            <p>Electric</p>
+                            <p>{{car.type}}</p>
                         </div>
                     </div>
                     <button class="btn btn-white" style="font-weight: bold; border: solid black 1px; border-radius: 20px; margin-top: 10px; font-size: 12px; width: 100%; margin-bottom: 20px;">Buy Now</button>
