--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
@@ -8,7 +8,7 @@
     <div class="home-card-sec">
         <div class="collec-cards" >
             <div   *ngFor="let car of carDetails; let i = index">
-                <div *ngIf="i != 1"  class="car-card">
+                <div class="car-card" (click)="redirect('car-sub')">
                     <img src={{car.imgUrl}}>
                     <div class="container">
                         <div class="cardhead">
@@ -19,48 +19,19 @@
                         <div class="smallblock">
                             <div class="smallsubblock text-center">
                                 <img src="../../../assets/speedometer-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>4,000</p>
+                                <p>{{car.speed}}</p>
                             </div>
                             <div class="smallsubblock text-center">
                                 <img src="../../../assets/manual-gearbox.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>Auto</p>
+                                <p>{{car.gear}}</p>
                             </div>
                             <div class="smallsubblock text-center">
                                 <img src="../../../assets/users-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>4 Person</p>
+                                <p>{{car.capacity}} Person</p>
                             </div>
                             <div class="smallsubblock text-center">
                                 <img src="../../../assets/gas-station.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>Electric</p>
-                            </div>
-                        </div>
-                        <button class="buybtn btn btn-white">Select</button>
-                    </div>
-                </div>
-                <div class="car-card" *ngIf="i == 1"  (click)="redirect('car-sub')">
-                    <img src={{car.imgUrl}}>
-                    <div class="container">
-                        <div class="cardhead">
-                            <p>{{car.name}}</p>
-                            <img (click)="turnRed()" src={{heartURL}}>
-                        </div>
-                        <h4 style="font-family: Montserrat; font-weight:bold; color: #ED5434;">$ {{car.price}}</h4>
-                        <div class="smallblock">
-                            <div class="smallsubblock text-center">
-                                <img src="../../../assets/speedometer-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>4,000</p>
-                            </div>
-                            <div class="smallsubblock text-center">
-                                <img src="../../../assets/manual-gearbox.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>Auto</p>
-                            </div>
-                            <div class="smallsubblock text-center">
-                                <img src="../../../assets/users-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>4 Person</p>
-                            </div>
-                            <div class="smallsubblock text-center">
-                                <img src="../../../assets/gas-station.png" style="height: 15px; width: auto; margin-bottom: 0;">
-                                <p>Electric</p>
+                                <p>{{car.type}}</p>
                             </div>
                         </div>
                         <button class="buybtn btn btn-white">Select</button>
