--- a/src/app/navbar-after-home-page/navbar-after-home-page.component.html
+++ b/src/app/navbar-after-home-page/navbar-after-home-page.component.html
@@ -117,7 +117,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" [style.color]="txtcolor">En<i class="fa-solid fa-angle-down" [style.color]="txtcolor"></i></a>
+            <a class="nav-link" aria-current="page" [style.color]="txtcolor">EN<i class="fa-solid fa-angle-down" [style.color]="txtcolor"></i></a>
         </li>
 
     </ul>
