--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 <!-- <app-login></app-login> -->
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
 <!-- <app-workspace></app-workspace> -->
+<!-- <app-how-it-works></app-how-it-works> -->
