--- a/src/app/home-screen/home-car-collec/home-car-collec.component.scss
+++ b/src/app/home-screen/home-car-collec/home-car-collec.component.scss
@@ -18,13 +18,52 @@
 
 .lc-top-card {
   width: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.4rem;
   border-radius: 10px;
-  background-image: url("../../../assets/Rectangle 85.png");
+  // background-image: url("../../../assets/Rectangle 85.png");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 11rem;
-  color: white;
+  // height: 11rem;
+  color: rgb(0, 0, 0);
+}
+
+.input-fields {
+  padding-left: 1rem;
+  // padding-top: 1rem;
+  // display: flex;
+  font-family: Inter;
+}
+
+.fields-align {
+  display: flex;
+  margin-bottom: 2rem;
+  width: 19rem;
+  justify-content: space-between;
+  color: #000;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+.fields-align input {
+  width: 9rem;
+  // margin-left: 3rem;
+  border-radius: 6px;
+  border: 1px solid rgba(217, 217, 217, 0.87);
+  height: 2rem;
+  margin-right: 1rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: black;
+}
+
+.fields-align p {
+  font-size: 0.9rem;
+  font-weight: 500;
+  margin: auto 0;
 }
 
 .lc-top-card {
@@ -61,8 +100,8 @@
 .see-details {
   height: 2rem;
   width: 9rem;
-//   padding-top: 1rem;
-margin-top: 0.3rem;
+  //   padding-top: 1rem;
+  margin-top: 0.3rem;
   border-radius: 1rem;
   font-family: Inter;
   font-size: 0.8rem;
@@ -87,8 +126,12 @@ margin-top: 0.3rem;
   border: solid rgb(190, 183, 183) 1px;
   border-radius: 1rem;
   padding: 0.5rem;
-  font-family: "Montserrat";
+  font-family: Monts;
+  width: 22rem;
+  margin-left: -1rem;
 }
+
+
 
 .lc-head {
   font-weight: bold;
@@ -205,4 +248,230 @@ margin-top: 0.3rem;
 
 .smallsubblock p {
   margin-bottom: 0;
+}
+
+.car-type-btn {
+  // width: 4rem !important;
+  height: 3rem;
+  text-align: center;
+  border-radius: 5rem !important;
+  font-weight: 600 !important;
+}
+
+.car-type-btn:hover {
+  background: black;
+  color: white;
+}
+
+.card-top-text {
+  display: flex;
+  font-family: Monts;
+  font-size: 0.8rem;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+#specifyColor {
+  accent-color: red;
+}
+
+input[type=radio]#Red {
+  accent-color: #FF0000;
+}
+
+.loan-radio {
+  margin-left: 1rem;
+  margin-right: 0.4rem;
+}
+
+.card-top-text label {
+  font-size: 0.8rem;
+  // font-weight: 400;
+}
+
+.loan-years button {
+  // margin-right: 0.7rem;
+  background-color: white;
+  border-radius: 6px;
+  border: 1px solid rgba(217, 217, 217, 0.87);
+  // font-size: 0.8rem;
+  font-size: 0.8rem;
+  height: 2rem;
+  width: 2rem;
+  align-items: center;
+}
+
+.calculate {
+  border-radius: 6px;
+  border: 1px solid #DB2423;
+  background: rgba(219, 36, 35, 0.04);
+  color: #DB2423;
+  font-family: Inter;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+  width: 13rem;
+}
+
+.calculate-div {
+  text-align-last: center;
+}
+
+.div-below-hr {
+  color: #232738;
+  font-family: Montserrat;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.3px;
+  padding-left: 1rem;
+
+}
+
+.serach-box {
+  border-radius: 5px;
+  border: 0.8px solid #D9D9D9;
+  // background: #FFF;
+  box-shadow: 0px -1px 8px 0px rgba(0, 0, 0, 0.12);
+  background-image: url('../../icons/search-outline 1.png');
+  // background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  // padding: 12px 20px 12px 40px;
+}
+
+.div-below-hr input {
+  background-image: url('../../icons/search-outline 1.png');
+  // background-image: url('search-outline 1.png');
+  background-position: 10px 14px;
+  background-repeat: no-repeat;
+  padding-top: 1rem;
+  width: 20rem;
+  padding-left: 3rem;
+  padding-bottom: 0.8rem;
+  border-radius: 5px;
+  border: 0.8px solid #D9D9D9;
+  box-shadow: 0px -1px 8px 0px rgba(0, 0, 0, 0.12);
+  background-size: 1.5rem 1.5rem;
+}
+
+.select-filters {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1rem;
+  margin-top: 1rem;
+  color: #232738;
+  font-family: Montserrat;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.3px;
+  // margin: auto 0;
+}
+
+.select-filters span {
+  font-weight: 500;
+}
+
+.select-filters img{
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 5px;
+border: 0.8px solid rgba(0, 0, 0, 0.15);
+}
+
+.select-filters p{
+  margin: auto 0;
+}
+
+.drop-menus{
+  padding-left: 1rem;
+  margin-top: 1rem;
+  color: var(--gray-scale-gray-900, #1A1A1A);
+font-family: Inter;
+font-size: 0.9rem;
+font-style: normal;
+font-weight: 500;
+line-height: 150%; /* 27px */
+}
+
+.drop-menu-options{
+  display: flex;
+  justify-content: space-between;
+}
+
+.budget-range{
+  padding-left: 1rem;
+  color: #232738;
+font-family: Montserrat;
+font-size: 1rem;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: -0.3px;
+margin-top: 1rem;
+}
+
+.budget-range input{
+  width: 19rem;
+  background: red;
+}
+
+.mileage-div{
+  padding-left: 1rem;
+  color: #232738;
+font-family: Montserrat;
+font-size: 1rem;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+letter-spacing: -0.3px;
+}
+
+.div-end-btn{
+  display: flex;
+  // margin: auto;
+  justify-content: space-around;
+}
+
+.btnn{
+  height: 3rem;
+  border-radius: 5px;
+border: 1px solid #DB2423;
+background: #FFF;
+color: #E42346;
+text-align: center;
+font-family: Montserrat;
+font-size: 0.7rem;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+letter-spacing: -0.3px;
+
+}
+
+.btnn:hover{
+  height: 3rem;
+  border-radius: 5px;
+border: 1px solid #DB2423;
+background: #DB2423;
+color: #FFF;
+text-align: center;
+font-family: Montserrat;
+font-size: 0.7rem;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+letter-spacing: -0.3px;
+}
+
+.show-res{
+  width: 8rem;
+}
+
+.reset{
+  width: 6rem;
 }
