--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -28,10 +28,8 @@
     </div>
     <div class="find-more-button-main">
         <div class="rounded border border-white flex-column justify-content-start align-items-start findMoreFirstDiv">
-            <div class="w-100 h-100 findMoreSecondDiv"></div>
-            <div class="d-inline-flex justify-content-center align-items-center gap-2 pad-bot">
-                <div class="text-white custom-font-size fs-5 fw-500">Find out more</div>
-            </div>
+            <!-- <div class="w-100 h-100 findMoreSecondDiv"></div> -->
+            <button class="btn btn-danger find-more-btn" (click)="onSubmit()">Find out more</button>
         </div>
         <div class="fourDotsFirst">
             <div class="fourDotsSecond"></div>
@@ -43,185 +41,7 @@
 </div>
 
 <!-- Part-2 -->
-<div class="part2">
-    <div class="howItWorks">How it works</div><br>
-    <div class="highPerform">A high-performing web-based car buying system</div>
 
-    <div class="container imageContainer">
-        <div class="row">
-            <div class="col col-width">
-                <div class="shadow-box">
-                    <img width="66" height="66" src="../../assets/search.png">
-                </div>
-                <div class="browsSelect">Browse and Select</div>
-                <div
-                    class="box-text">
-                    Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices, orci vitae
-                    convallis mattis.</div>
-            </div>
-
-            <div class="col">
-                <div class="vectorImage-main">
-                    <img class="vectorImage" src="../../assets/Curv.png">
-                </div>
-            </div>
-            <div class="col col-width">
-                <div class="shadow-box">
-                    <img width="66" height="66" src="../../assets/square_icon.png">
-                </div>
-                <div class="browsSelect">Browse and Select</div>
-                <div
-                    class="box-text">
-                    Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices, orci vitae
-                    convallis mattis.</div>
-            </div>
-            <div class="col">
-                <div class="vectorImage-main">
-                    <img class="vectorImage" src="../../assets/Curv.png">
-                </div>
-            </div>
-            <div class="col col-width">
-                <div class="shadow-box">
-                    <img width="66" height="66" src="../../assets/car_icon.png">
-                </div>
-                <div class="browsSelect">Book and Confirm</div>
-                <div
-                    class="box-text">
-                    Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices, orci vitae convallis mattis.</div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- <div class="rectangleImage">
-    <img src="../../assets/Rectangle.png">
-</div> -->
-<div class="rectViewAll" style="margin: 50px 0;">
-    <div class="container" style="margin-bottom: 30px;">
-        <div class="brands-view-all">
-            <div class="selectByBrand">Select by Brands</div>
-            <div class="viewAll"> View all</div>
-            <div class="rightArrowIcon">
-                <img src="../../assets/arrow-right (1).png">
-            </div>
-        </div>
-        <div class="row align-items-end car-types">
-            <div class="col row-data">
-                <img src="..\assets\toyota.png" alt="nt">
-                <p>Toyota</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Ford.png" alt="nt">
-                <p>Ford</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Tesla.png" alt="nt">
-                <p>Tesla</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Volkswagen.png" alt="nt">
-                <p>Volkswagen</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Honda.png" alt="nt">
-                <p>Honda</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Nissan.png" alt="nt">
-                <p>Nissan</p>
-            </div>
-        </div>
-        <div class="row align-items-end car-types my-3">
-            <div class="col row-data">
-                <img src="../../assets/Chevrolet1 (1).png" alt="nt">
-                <p>Chevrolet </p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\bmw_logo.png" alt="nt">
-                <p>BMW</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\mercedes_benz.png" alt="nt">
-                <p>Mercedes Benz</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Hyundai.png" alt="nt">
-                <p>Hyundai</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Audi.png" alt="nt">
-                <p>Audi</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\Kia.png" alt="nt">
-                <p>Kia</p>
-            </div>
-        </div>
-    </div>
-    <div class="container ">
-        <div class="brands-view-all">
-            <div class="selectByBrand">Select by Body Type</div>
-            <div class="viewAll"> View all</div>
-            <div class="rightArrowIcon">
-                <img src="../../assets/arrow-right (1).png">
-            </div>
-        </div>
-        <div class="row align-items-end car-types">
-            <div class="col row-data">
-                <img src="..\assets\suv-red 1.png" alt="nt">
-                <p>SUV</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\crossover-red 1.png" alt="nt">
-                <p>Crossover</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\wagon-red 1.png" alt="nt">
-                <p>Wagon</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\mpv-red 1.png" alt="nt">
-                <p>Family MBP</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\sport-coupe-red 1.png" alt="nt">
-                <p>Sport Coupe</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\compact-red 1.png" alt="nt">
-                <p>Compact</p>
-            </div>
-        </div>
-        <div class="row align-items-end car-types my-3">
-            <div class="col row-data">
-                <img src="..\assets\coup-red 1.png" alt="nt">
-                <p>Coup</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\pickup-red 1.png" alt="nt">
-                <p>BMW</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\sedan-red 1.png" alt="nt">
-                <p>Sedan</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\wagon-red 1.png" alt="nt">
-                <p>Limousine</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\convertible-red 1.png" alt="nt">
-                <p>Convertible</p>
-            </div>
-            <div class="col row-data">
-                <img src="..\assets\crossover-red 1.png" alt="nt">
-                <p>Crossover</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<app-home-car-collec></app-home-car-collec>
 <div>
     <div class="car-container">
         <img class="car-bg" src="..\assets\image 4.png" alt="">
