--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,10 +23,10 @@
             [style.color]="txtcolor">Services</a>
         </li>
         <li>
-            <button type="button" class="btn loginBtn border border-1 border-white" (click)="redirect('/user/login')" >Login</button>
+            <button type="button" class="btn loginBtn" (click)="redirect('/user/login')" [style.border]="'solid 1px ' + btncolor" [style.color]="btncolor">Login</button>
         </li>
         <li>
-            <button type="button" class="btn loginBtn border border-1 border-white" (click)="redirect('registration')" >Register</button>
+            <button type="button" class="btn loginBtn" (click)="redirect('registration')" [style.border]="'solid 1px ' + btncolor" [style.color]="btncolor">Register</button>
         </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#" [style.color]="txtcolor">EN<i class="fa-solid fa-angle-down"
