--- a/src/app/newpass/newpass.component.html
+++ b/src/app/newpass/newpass.component.html
@@ -34,13 +34,12 @@
             <label class="did-floating-label " style="font-size: -0.3rem;">Password</label>
           </div>
         </div>
+ 
+
 </div>
 
-<button type="submit" (click)="onSubmit()" class="started btn" style="font-family: 'Monts';">Confirm</button>
+<button type="submit" (click)="onSubmit($event)" class="started btn" style="font-family: 'Monts';">Confirm</button>
 <div id="alertContainer" class="top-center-alert"></div>
-
-
-
 </form>
 
   </div>
