--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
 <!-- <app-home-car-collec></app-home-car-collec> -->
 <!-- <app-car-subs></app-car-subs> -->
 <router-outlet></router-outlet>
+<!-- <app-approved></app-approved> -->
+<!-- <app-nav-bar-after-home-profile></app-nav-bar-after-home-profile> -->
 <!-- <app-login></app-login> -->
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
 <!-- <app-workspace></app-workspace> -->
