--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -162,19 +162,19 @@
                     <p style="font-size: 13px; margin-top: -15px; margin-bottom: 10px; font-weight: bold; color:grey">Adjust Slider or Type in the Percentage</p>
                     
                         <div class="container rangerr">
-                            <p><b>%</b></p>
-                            <!-- <input class="border border-1 rangerinp" type="search" placeholder="Search" aria-label="Search"> -->
+                            <p><b>{{percentageValue}}%</b></p>
+
                         </div>
                     
-                    <input type="range" id="vol" name="vol" min="0" max="100" list="tickmarks" style="accent-color: #E42346; width: 100%; height: 5px;">
+                    <input type="range" [(ngModel)]="percentageValue" (input)="updatePercentage($event)" id="vol" name="vol" min="0" max="100" list="tickmarks" style="accent-color: #E42346; width: 100%; height: 5px;">
                     <datalist id="tickmarks">
-                        <option value="5" label="5%"></option>
-                        <option value="10" label="10%"></option>
+                        <option value="0" label="0%"></option>
                         <option value="15" label="15%"></option>
-                        <option value="20" label="20%"></option>
-                        <option value="25" label="25%"></option>
                         <option value="30" label="30%"></option>
-                        <option value="35" label="35%"></option>
+                        <option value="45" label="45%"></option>
+                        <option value="60" label="60%"></option>
+                        <option value="75" label="75%"></option>
+                        <option value="100" label="100%"></option>
                       </datalist>
                       <div class="container text-center mt-3">
                         <button class="btn btn-secondary buybtn mb-2" style="justify-content: center;">Buy Back Pack Amount</button>
