--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
@@ -8,7 +8,7 @@
     <div class="home-card-sec">
         <div class="collec-cards" >
             <div   *ngFor="let car of carDetails; let i = index">
-                <div class="car-card" *ngIf="i != 1">
+                <div class="car-card" *ngIf="!allowCars(i)">
                     <img src={{car.imgUrl}}>
                     <div class="container">
                         <div class="cardhead">
@@ -37,7 +37,7 @@
                         <button  class="buybtn btn btn-white">Select</button>
                     </div>
                 </div>
-                <div class="car-card" *ngIf="i == 1" >
+                <div class="car-card" *ngIf="allowCars(i)" >
                     <img src={{car.imgUrl}}>
                     <div class="container">
                         <div class="cardhead">
@@ -63,7 +63,8 @@
                                 <p>{{car.type}}</p>
                             </div>
                         </div>
-                        <button (click)="redirect('car-sub')" class="buybtn btn btn-white">Select</button>
+                        <button (click)="buyNow(i)" class="buybtn btn btn-white">Select</button>
+                        <!-- <button class="buybtn btn btn-white" (click)="">Buy Now</button> -->
                     </div>
                 </div>
             </div>
