--- a/src/app/home-screen/home-car-collec/home-car-collec.component.html
+++ b/src/app/home-screen/home-car-collec/home-car-collec.component.html
@@ -49,17 +49,17 @@
                     <p>Loan Term Years :</p>
                     <button class="btn-group">28</button>
                     <button class="btn-group">36</button>
-                    <button class="btn-group">48</button>
+                    <button class="btn-danger  calculate" style=" border-color :red; background-color: rgba(219, 36, 35, 0.04);">48</button>
                     <button class="btn-group">60</button>
                     <button class="btn-group">72</button>
                 </div>
 
-                <div class="fields-align loan-years">
+                <div class="fields-align loan-years" id="specific-button">
                     <p>Payment Frequency:</p>
-                    <button class="btn-group">M</button>
-                    <button class="btn-group">Q</button>
-                    <button class="btn-group">SA</button>
-                    <button class="btn-group"> A</button>
+                    <button class="btn-group"  style="padding: 0.6rem;">M</button>
+                    <button class="btn-group" style="padding: 0.6rem;">Q</button>
+                    <button class="btn-group" style="padding: 0.4rem;">SA</button>
+                    <button class="btn-group" style="padding: 0.6rem;"> A</button>
                 </div>
 
                 <div class="calculate-div">
