--- a/src/app/rm-homepage/homepage-upper/homepage-upper.component.html
+++ b/src/app/rm-homepage/homepage-upper/homepage-upper.component.html
@@ -33,20 +33,20 @@
                         <div class="select-area">
                             <select class="form-select" aria-label="Default select example">
                                 <option selected>Select Budget</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1">$30000</option>
+                                <option value="2">$80000</option>
+                                <option value="3">$150000</option>
                               </select>
             
                               <select class="form-select" aria-label="Default select example">
                                 <option selected>Select Vehicle</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1"> Toyota Fortuner</option>
+                                <option value="2"> Toyota Vellfire</option>
+                                <option value="3">Toyota Camry</option>
                               </select>
                         </div>
                         <div>
-                            <button class="btn btn-lg btn-danger card-search-btn">SEARCH</button>
+                            <button class="btn btn-lg btn-danger card-search-btn"  id="search" >SEARCH</button>
                         </div>
                     </div>
                 </div>
