--- a/src/app/rm-homepage/homepage-upper/homepage-upper.component.scss
+++ b/src/app/rm-homepage/homepage-upper/homepage-upper.component.scss
@@ -7,6 +7,7 @@
     // position: absolute;
 }
 
+
 .find-your-car-heading {
     font-family: "Monts" !important;
 }
@@ -14,6 +15,16 @@
 .loginBtn {
     padding-left: 15px;
     padding-right: 15px;
+}
+#search{
+ 
+    font-family: ZenKakuGothicAntique;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 26px;
+    letter-spacing: 0px;
+    text-align: center;
+    
 }
 
 #arrow {
