--- a/src/app/newpass/newpass.component.html
+++ b/src/app/newpass/newpass.component.html
@@ -25,13 +25,13 @@
 
         <div class="form-group container1">
           <div class="did-floating-label-content label-input">
-            <input class="did-floating-input " formControlName="email" type="text" placeholder="Email">
-            <label class="did-floating-label" style="font-size: -0.3rem;">Email</label>
+            <input class="did-floating-input " formControlName="email" type="password" placeholder="************">
+            <label class="did-floating-label" style="font-size: -0.3rem;">Enter New Password</label>
           </div>  
   
           <div class="did-floating-label-content label-input">
-            <input class="did-floating-input" type="password" formControlName="password" placeholder="*********">
-            <label class="did-floating-label " style="font-size: -0.3rem;">Password</label>
+            <input class="did-floating-input" type="password" formControlName="password" placeholder="************">
+            <label class="did-floating-label " style="font-size: -0.3rem;">Confirm New Password</label>
           </div>
         </div>
  
