--- a/src/app/approved/approved.component.html
+++ b/src/app/approved/approved.component.html
@@ -1,7 +1,6 @@
 <app-navbar-after-home-page [navtheme]="'whitetheme'"></app-navbar-after-home-page>
 
 <div class="an-pending">
-
     <div class="card left-card">
 
  
@@ -9,7 +8,9 @@
     </div>
 
     <div class="card right-side">
-
+<div class="approval">
+    <h1>{{title1}}</h1>
+</div>
 
     </div>
 
