--- a/src/app/approved/approved.component.scss
+++ b/src/app/approved/approved.component.scss
@@ -1,16 +1,16 @@
 .an-pending{
-
     padding: 110px 65px 0px 25px;
-
     display:flex;
-
     gap: 20px;
-
- 
-
 }
+ .approval{
+    color: hwb(0 7% 8%);
 
- 
+// font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+ }
 
 .left-card{
 
@@ -25,7 +25,7 @@
 .right-side{
 
     flex:1;
-
+height: fit-content;
     padding: 20px
 
 }
