--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,57 @@
 
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 
+body {
+  margin: 0;
+  line-height: normal;
+}
+
+// :root {
+//   /* fonts */
+//   --font-montserrat: Montserrat;
+//   --font-inter: Inter;
+
+//   /* font sizes */
+//   --font-size-xs: 12px;
+//   --font-size-sm: 14px;
+//   --font-size-lg: 18px;
+//   --font-size-xl: 20px;
+//   --font-size-base: 16px;
+//   --font-size-5xl: 24px;
+//   --font-size-7xl: 26px;
+
+//   /* Colors */
+//   --color-white: #fff;
+//   --color-black: #000;
+//   --color-gray: #919193;
+//   --color-darkslategray-100: #36394c;
+//   --color-aliceblue: #ebf1f5;
+//   --color-blueviolet: #5b41e1;
+//   --color-ghostwhite: #f2f1fa;
+//   --color-royalblue: #236af2;
+//   --color-crimson-100: #db2423;
+//   --color-crimson-200: rgba(219, 36, 35, 0.03);
+//   --color-crimson-300: rgba(219, 36, 35, 0);
+//   --color-gainsboro: #d9d9d9;
+
+//   /* Gaps */
+//   --gap-base: 16px;
+//   --gap-7xs: 6px;
+//   --gap-101xl: 120px;
+//   --gap-xl: 20px;
+//   --gap-xs: 12px;
+//   --gap-7xl: 26px;
+//   --gap-5xl: 24px;
+//   --gap-41xl: 60px;
+
+//   /* Border radiuses */
+//   --br-xs: 12px;
+//   --br-5xs: 8px;
+//   --br-11xs: 2px;
+//   --br-3xs: 10px;
+// }
+
+
 @font-face {
   font-family: 'Monts';
   src: url('assets/fonts/Montserrat-VariableFont_wght.ttf');
