--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 <!-- <app-home-screen></app-home-screen> -->
 <!-- <app-home-car-collec></app-home-car-collec> -->
 <!-- <app-car-subs></app-car-subs> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-apply-now-pending></app-apply-now-pending>
 <!-- <app-login></app-login> -->
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
 <!-- <app-workspace></app-workspace> -->
