--- a/src/app/car-subs/car-subs.component.scss
+++ b/src/app/car-subs/car-subs.component.scss
@@ -1,4 +1,4 @@
-#car-subs-nav{
+#car-subs-nav {
     margin-left: 62px;
     margin-right: 62px;
     // position: fixed;
@@ -72,19 +72,17 @@ img {
     border-top: 1px solid rgb(141, 140, 140);
     height: 60px;
     z-index: 7;
-    margin-top: -20px;
-    background-color: rgb(255, 255, 255);
+    background-color: #E97978;
     display: flex;
     padding-left: 60px;
     padding-right: 60px;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .redtxt{
-    color: #c41628;
-    font-weight: bold;
+    color: #ffffff;
+    font-weight: 500;
     padding-right: 20px;
 }
 
@@ -97,13 +95,30 @@ img {
 
 .cs-footer-com{
     display: flex;
+    align-items: baseline;
+    font-family: "Inter";
 }
 
-.cs-footer-com button{
-    color:white;
+.applybtn{
+    color:#DB2423;
+    font-family: "Monts";
+    font-weight: 700;
     height: 40px;
-    background-color: #c41628;
-    padding: 0 3rem;
+    font-size: 15px;
+    background-color: #ffffff;
+    width: 11rem;
+}
+
+.roadprice{
+    width: 10rem;
+    color:#DB2423;
+    font-family: "Inter";
+    font-weight: 600;
+    height: 40px;
+    font-size: 15px;
+    margin-right: 15px;
+    background-color: #ffffff;
+    width: 8rem;
 }
 
 .slide {
@@ -151,7 +166,10 @@ img {
     color: black;
     min-width: 68%;
     padding: 2.5rem;
+    // padding-bottom: 5rem;
     border-radius: 5px;
+    // height: 18rem;
+    margin-bottom: 10rem;
 }
 
 .leftcard h2 {
@@ -228,7 +246,7 @@ img {
     padding: 1.5rem;
     font-family: "Montserrat";
     color: black;
-    height: 54rem;
+    height: 53rem;
     overflow-y: scroll;
     overflow-x: scroll;
     overflow-x: scroll;
@@ -253,7 +271,7 @@ img {
 
  .rightcard::-webkit-scrollbar {
      width: 2px;
-     height: 5px;
+     height: 0px;
  }
  
  .rightcard::-webkit-scrollbar-track { 
@@ -344,10 +362,11 @@ img {
 .numbers button{
     height: 58px;
     min-width: 60px;
+
     background-color: rgb(239, 233, 233);
-    border: solid 1px rgb(156, 151, 151);
+    border: solid 2px rgb(156, 151, 151);
     color: black;
-    font-weight: 500;
+    font-weight: 800;
 }
 
 .numbtn:hover{
