--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- <app-home-screen></app-home-screen> -->
 <!-- <app-home-car-collec></app-home-car-collec> -->
 <!-- <app-car-subs></app-car-subs> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
 <!-- <app-approved></app-approved>  -->
     <!-- <app-login></app-login> -->
@@ -13,4 +13,4 @@
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
 <!-- <app-workspace></app-workspace> -->
 <!-- <app-how-it-works></app-how-it-works> -->
-<app-apply-now-flow1></app-apply-now-flow1>
+<!-- <app-apply-now-flow1></app-apply-now-flow1> -->
