--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -8,7 +8,7 @@
         <img src="../../assets/logos/Vector.png">
         <p>TOYOTA CARS</p>
         <img src="../../assets/logos/Vector.png">
-        <p>{{techDetailsParameter.name}}</p>
+        <p>{{techDetailsParameter.name.toUpperCase()}}</p>
     </div>
     <div class="bodyclass">
         <div>
