--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -29,7 +29,7 @@
     <div class="find-more-button-main">
         <div class="rounded border border-white flex-column justify-content-start align-items-start findMoreFirstDiv">
             <!-- <div class="w-100 h-100 findMoreSecondDiv"></div> -->
-            <button class="btn btn-danger find-more-btn" (click)="onSubmit()">Find out more</button>
+            <button class="btn btn-danger find-more-btn "  style="border-radius: 7px;"   (click)="onSubmit()">Find out more</button>
         </div>
         <div class="fourDotsFirst">
             <div class="fourDotsSecond"></div>
