--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -256,6 +256,6 @@
         <h6 class="redtxt" style="font-size: 14px;">View Benefits</h6>
     </div>
     <div class="cs-footer-com" (click)="redirect('apply-now-flow-1')">
-        <button href="car-sub-submit" class="btn">Apply Now</button>
+        <button href="car-sub-submit" class="btn roadprice">Apply Now</button>
     </div>
 </div>
