--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
 <!-- <app-car-subs></app-car-subs> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
-<app-approved></app-approved> 
+<!-- <app-approved></app-approved>  -->
     <!-- <app-login></app-login> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-apply-now-pending></app-apply-now-pending> -->
 <!-- <app-login></app-login> -->
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
