--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
@@ -34,7 +34,7 @@
                                 <p>{{car.type}}</p>
                             </div>
                         </div>
-                        <button  class="buybtn btn btn-white">Select</button>
+                        <button  class="buybtn btn btn-white" style="font-family: Inter;">Select</button>
                     </div>
                 </div>
                 <div class="car-card" *ngIf="allowCars(i)" >
@@ -63,7 +63,7 @@
                                 <p>{{car.type}}</p>
                             </div>
                         </div>
-                        <button (click)="buyNow(i)" class="buybtn btn btn-white">Select</button>
+                        <button (click)="buyNow(i)" class="buybtn btn btn-white" style="font-family: Inter;  ">Select</button>
                         <!-- <button class="buybtn btn btn-white" (click)="">Buy Now</button> -->
                     </div>
                 </div>
