Credit Information Page has Been Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <!-- <app-car-subs></app-car-subs> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
+<!-- <app-credit-information></app-credit-information> -->
 <!-- <app-approved></app-approved>  -->
     <!-- <app-login></app-login> -->
 <router-outlet></router-outlet>
