--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
 <!-- <app-credit-information></app-credit-information> -->
-<!-- <app-approved></app-approved>  -->
+<app-approved></app-approved> 
     <!-- <app-login></app-login> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-approved></app-approved> -->
 <!-- <app-login></app-login> -->
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
