--- a/src/app/approved/approved.component.scss
+++ b/src/app/approved/approved.component.scss
@@ -7,9 +7,14 @@
 }
 
 .left-card{
-    height: 30rem;
-    // width: 32.5vw;
+    // height: 30rem;
+    padding: 9px;
+    padding-left: 5px;
+    padding-right: 65px;
+    left: 3%;
+    width: 30.5vw;
     max-width: 32.5vw;
+    // margin-right: 1rem;
 }
 
 .right-side{
